<package>
  <name>rxgraph</name>
  <version>1.9.12</version>
  <description>
    rxgraph is a command-line tool for visualizing a ROS computation graph.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/rxgraph</url>
  <url type="repository">https://code.ros.org/svn/ros/stacks/rx</url>
  <url type="bugtracker">https://code.ros.org/trac/ros/query?status=assigned&amp;status=new&amp;status=reopened&amp;component=rx&amp;order=priority</url>
  <author>Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>wxpython_swig_interface</build_depend>
  <build_depend>wxwidgets</build_depend>

  <run_depend>rosgraph</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>wxpython</run_depend>
  <run_depend>wxpython_swig_interface</run_depend>
  <run_depend>wxwidgets</run_depend>
  <run_depend>xdot</run_depend>

  <export>
    <deprecated>This wxWidget based tool is superseded by the Qt based tool rqt_graph</deprecated>
  </export>
</package>
