<package>
  <name>rxtools</name>
  <version>1.9.4</version>
  <description>
    rxtools is two things.
    First it is a library of GUI widgets, written in wxWidgets, that can be embedded in other applications. Second, it is a set of GUI applications that view and manage ROS state.
    These GUI applications include <tt>rxconsole</tt> and <tt>rxplot</tt>.

    Pieces of rxtools use some icons from the <a href="http://www.famfamfam.com/lab/icons/silk/">Silk icon pack from famfamfam</a>.
    These icons have a separate Creative Commons Attribution 2.5 License.
    The source code for the software in this package is BSD.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>  
  <license>Creative Commons</license>

  <url type="website">http://www.ros.org/wiki/rxgraph</url>
  <url type="repository">https://code.ros.org/svn/ros/stacks/rx</url>
  <url type="bugtracker">https://code.ros.org/trac/ros/query?status=assigned&amp;status=new&amp;status=reopened&amp;component=rx&amp;order=priority</url>
  <author>Josh Faust</author>
  <author>Rob Wheeler</author>
  <author>Ken Conley</author>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>wxPython_swig_interface</build_depend>

  <run_depend>python-gtk2</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>wxpython</run_depend>
  <run_depend>wxPython_swig_interface</run_depend>
  <run_depend>xdot</run_depend>
</package>
